[gd_scene load_steps=3 format=3 uid="uid://dm1qltp3b630k"]

[ext_resource type="Script" path="res://scripts/bonus_count.gd" id="1_m8vcm"]
[ext_resource type="FontFile" uid="uid://cs3vnj2mxhwsh" path="res://resources/Comfortaa-Medium.ttf" id="2_e6wh1"]

[node name="BonusCount" type="HBoxContainer"]
offset_right = 685.0
offset_bottom = 130.0
script = ExtResource("1_m8vcm")

[node name="minus1" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e6wh1")
theme_override_font_sizes/font_size = 64
text = "-1"

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e6wh1")
theme_override_font_sizes/font_size = 64
text = "Бонус"
horizontal_alignment = 1

[node name="plus1" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e6wh1")
theme_override_font_sizes/font_size = 64
text = "+1"

[connection signal="pressed" from="minus1" to="." method="_on_minus_1_pressed"]
[connection signal="pressed" from="plus1" to="." method="_on_plus_1_pressed"]
